--- a/app/src/main/res/layout/activity_open_note2.xml
+++ b/app/src/main/res/layout/activity_open_note2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
