loadNote combine with addNote, show notes on main screen&& add delete note

--- a/app/src/main/res/layout/activity_open_note2.xml
+++ b/app/src/main/res/layout/activity_open_note2.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -50,17 +49,17 @@
             android:paddingStart="6sp"
             android:paddingEnd="6sp"
             android:textColor="@android:color/black"
-            android:textSize="24sp"
-            tools:text="@tools:sample/lorem/random" />
+            android:textSize="24sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/dateNote"
-        android:layout_width="64dp"
+        android:layout_width="70dp"
         android:layout_height="0dp"
-        android:textSize="16sp"
-
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_gravity="end"
+        android:padding="12dp"
+        android:textSize="16sp" />
 
 </LinearLayout>
