--- a/app/src/main/res/drawable/note_stroke.xml
+++ b/app/src/main/res/drawable/note_stroke.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="#FFEF6C00" />
-    <corners android:radius="20dp"></corners>
+        android:color="#FC6E20" />
+    <corners android:radius="20dp">
+
+    </corners>
 </shape>
