--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,7 +20,7 @@
         android:layout_height="81dp"
         android:gravity="center"
         android:text="Notes"
-        android:textColor="@android:color/holo_orange_dark"
+        android:textColor="#FC6E20"
         android:textSize="@android:dimen/app_icon_size" />
 
 </LinearLayout>
