--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/stroke_note"
+    android:background="@drawable/note_stroke"
     android:orientation="vertical"
     android:paddingStart="6dp"
     android:paddingTop="8dp"
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:maxLines="5"
+        android:maxLines="3"
         android:textSize="18sp"
         android:textColor="@android:color/black"
         tools:text="@tools:sample/lorem/random" />
@@ -26,16 +26,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
-        android:maxLines="10"
+        android:maxLines="8"
         android:textSize="14sp"
         tools:text="@tools:sample/lorem/random"
         android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/dateItem"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
-        android:textColor="@android:color/black" />
+        android:layout_gravity="end"
+        android:textColor="#323232"
+        tools:text="@tools:sample/date/ddmmyy" />
 
 </LinearLayout>
