--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,11 @@
     <style name="MainAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
-        <item name="colorPrimaryDark">@android:color/holo_orange_dark</item>
-        <item name="colorAccent">@android:color/black</item>
-        <item name="colorControlNormal">@android:color/holo_orange_dark</item>
-        <item name="colorControlActivated">@android:color/holo_orange_dark</item>
-        <item name="colorControlHighlight">@android:color/holo_orange_dark</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
+        <item name="colorAccent">#FC6E20</item>
+        <item name="colorControlNormal">#FC6E20</item>
+        <item name="colorControlActivated">#FC6E20</item>
+        <item name="colorControlHighlight">#FC6E20</item>
     </style>
 
 </resources>
