--- a/app/src/main/res/layout/activity_open_note2.xml
+++ b/app/src/main/res/layout/activity_open_note2.xml
@@ -54,8 +54,18 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:id="@+id/staticString"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_gravity="end"
+
+        android:textSize="16sp"
+        android:text="Last update:" />
+
+    <TextView
         android:id="@+id/dateNote"
-        android:layout_width="70dp"
+        android:layout_width="120dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_gravity="end"
